<resources>
    <string name="app_name">Tiktok</string>
    <string name="action_settings">Settings</string>

    <string name="hours_output">00</string>
    <string name="minutes_output">00</string>
    <string name="seconds_output">00</string>
    <string name="colon">:</string>
    <string name="play">▶</string>
    <string name="pause">II</string>
    <string name="stop">■</string>
    <string name="set_duration">Set Duration</string>
</resources>