<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <!-- ======================================================= -->
    <LinearLayout
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:background="@drawable/main"
        app:layout_constraintTop_toTopOf="parent"

        >
    </LinearLayout>


    <!-- ======================================================= -->

    <TextClock
        android:id="@+id/worldtime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="70sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"/>




    <EditText
        android:id="@+id/check"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80sp"
        android:gravity="bottom|center"
        android:hint="Minutes"

        android:textColorHint="#CACACA"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/bt_show"

        app:layout_constraintRight_toLeftOf="@+id/bt_show"
        app:layout_constraintLeft_toLeftOf="parent"

        />

    <Button
        android:id="@+id/bt_show"
        android:text="Submit"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:layout_marginEnd="15sp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/worldtime"
        app:layout_constraintRight_toRightOf="parent">
    </Button>

    <TextView
        android:id="@+id/guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please Enter Your Running Duration"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintLeft_toLeftOf="@id/check"
        app:layout_constraintRight_toRightOf="@id/check"
        app:layout_constraintTop_toBottomOf="@id/check"

        android:gravity="center"
        >
    </TextView>




    <!-- Focusable link: https://stackoverflow.com/questions/11369479/how-to-detect-when-user-leaves-an-edittext -->
    <EditText
        android:id="@+id/hours_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hours_output"
        android:textSize="40sp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:inputType="number"
        android:focusable="true"
        android:focusableInTouchMode="true"

        app:layout_constraintTop_toBottomOf="@id/check"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/colon_betw_hours_min"
        />

    <TextView
        android:id="@+id/hours_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hours_output"
        android:textSize="40sp"
        android:textColor="#DFDFDF"

        app:layout_constraintTop_toTopOf="@id/hours_input"
        app:layout_constraintBottom_toBottomOf="@id/hours_input"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/colon_betw_hours_min"
        />

    <TextView
        android:id="@+id/colon_betw_hours_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/colon"
        android:textSize="40sp"
        android:textColor="#DFDFDF"
        app:layout_constraintTop_toTopOf="@id/minutes_input"
        app:layout_constraintBottom_toBottomOf="@id/minutes_input"
        app:layout_constraintLeft_toRightOf="@id/hours_input"
        app:layout_constraintRight_toLeftOf="@id/minutes_input"
        />

    <EditText
        android:id="@+id/minutes_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/minutes_output"
        android:textSize="40sp"
        android:inputType="number"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="@id/hours_input"
        app:layout_constraintBottom_toBottomOf="@id/hours_input"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/minutes_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/minutes_output"
        android:textSize="40sp"
        android:textColor="#DFDFDF"
        app:layout_constraintTop_toTopOf="@id/hours_input"
        app:layout_constraintBottom_toBottomOf="@id/hours_input"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/colon_betw_min_sec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/colon"
        android:textSize="40sp"
        android:textColor="#DFDFDF"
        app:layout_constraintTop_toTopOf="@id/minutes_input"
        app:layout_constraintBottom_toBottomOf="@id/minutes_input"
        app:layout_constraintLeft_toRightOf="@id/minutes_input"
        app:layout_constraintRight_toLeftOf="@id/seconds_input"
        />

    <EditText
        android:id="@+id/seconds_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/seconds_output"
        android:textSize="40sp"
        android:textColor="#FFFFFF"
        android:inputType="number"
        android:focusable="true"
        android:focusableInTouchMode="true"

        app:layout_constraintTop_toTopOf="@id/hours_input"
        app:layout_constraintBottom_toBottomOf="@id/hours_input"
        app:layout_constraintLeft_toRightOf="@id/colon_betw_min_sec"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/seconds_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/seconds_output"
        android:textSize="40sp"
        android:textColor="#DFDFDF"
        app:layout_constraintTop_toTopOf="@id/hours_input"
        app:layout_constraintBottom_toBottomOf="@id/hours_input"
        app:layout_constraintLeft_toRightOf="@id/colon_betw_min_sec"
        app:layout_constraintRight_toRightOf="parent"
        />





    <com.google.android.material.button.MaterialButton
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="30dp"
        android:text="@string/pause"
        android:textColor="#FFFFFF"
        android:textSize="45sp"

        android:paddingTop="11.5sp"
        android:paddingBottom="10dp"

        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="@id/play"
        app:layout_constraintBottom_toBottomOf="@+id/play"
        app:layout_constraintRight_toLeftOf="@id/play"
        />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:cornerRadius="30dp"
        android:text="@string/play"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:paddingBottom="10sp"
        android:paddingEnd="10sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/minutes_input"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="30dp"
        android:text="@string/stop"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        android:paddingBottom="10sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/minutes_input"
        app:layout_constraintLeft_toRightOf="@id/play"
        />

    <Button
        android:id="@+id/setDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_duration"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/pause"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>